Update location to Pennsylvania USA and switch to Curaçao Gaming Authority
- Change all location references from Quezon City, Philippines to Pennsylvania, United States of America
- Replace PAGCOR regulatory information with Curaçao Gaming Authority (CGA)
- Remove 18+ age verification gate/modal for display-only website
- Update meta description and keywords
- Remove PAGCOR contact links and disclaimers
- Clarify website is for display and promotional purposes only

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="K Entertainment Studio Inc. - Premium adult content production and innovative online gaming entertainment. Based in Quezon City, Philippines. 18+ Exclusive Showcase.">
-    <meta name="keywords" content="premium entertainment, adult content, gaming, Quezon City, Philippines">
+    <meta name="description" content="K Entertainment Studio Inc. - Premium adult content production and innovative online gaming entertainment. Based in Pennsylvania, United States. Exclusive Showcase.">
+    <meta name="keywords" content="premium entertainment, adult content, gaming, Pennsylvania, United States">
     <meta name="robots" content="noindex, nofollow">
     <title>K Entertainment Studio Inc. | Premium Entertainment Redefined</title>
     
@@ -21,34 +21,6 @@
 </head>
 <body>
     
-    <!-- ===========================
-         AGE VERIFICATION MODAL
-    =========================== -->
-    <div id="ageGate" class="age-gate" role="dialog" aria-labelledby="ageGateTitle" aria-modal="true">
-        <div class="age-gate-overlay"></div>
-        <div class="age-gate-content">
-            <div class="age-gate-icon">🔞</div>
-            <h2 id="ageGateTitle">Age Verification Required</h2>
-            <p class="age-gate-text">
-                This website features <strong>adult-oriented content</strong> and is strictly for individuals <strong>18 years and older</strong>.
-            </p>
-            <p class="age-gate-subtext">
-                By entering, you confirm that you are of legal age in your jurisdiction and agree to view adult content responsibly.
-            </p>
-            <div class="age-gate-buttons">
-                <button id="ageConfirm" class="btn-age-confirm" aria-label="Confirm you are 18 years or older">
-                    ✓ I Confirm I Am 18+
-                </button>
-                <button id="ageExit" class="btn-age-exit" aria-label="Exit this website">
-                    ✗ Exit
-                </button>
-            </div>
-            <p class="age-gate-footer">
-                Your confirmation will be stored for 30 days.
-            </p>
-        </div>
-    </div>
-
     <!-- ===========================
          NAVIGATION BAR
     =========================== -->
@@ -89,7 +61,7 @@
                 Adult Productions & Innovative Gaming Experiences
             </p>
             <p class="hero-location">
-                Quezon City, Philippines | 18+ Exclusive Showcase
+                Pennsylvania, United States of America | Exclusive Showcase
             </p>
             <a href="#about" class="hero-cta">Discover More</a>
         </div>
@@ -108,7 +80,7 @@
                 <div class="about-text reveal-fade-up">
                     <h3 class="about-subtitle">Redefining Premium Entertainment</h3>
                     <p>
-                        Founded in <strong>2024</strong>, K Entertainment Studio Inc. is a trailblazing entertainment company based in <strong>Quezon City, National Capital Region, Philippines</strong>. We specialize in creating sophisticated, responsible entertainment experiences that push boundaries while maintaining the highest standards of quality and discretion.
+                        Founded in <strong>2024</strong>, K Entertainment Studio Inc. is a trailblazing entertainment company based in <strong>Pennsylvania, United States of America</strong>. We specialize in creating sophisticated, responsible entertainment experiences that push boundaries while maintaining the highest standards of quality and discretion.
                     </p>
                     <p>
                         <strong>Our Mission:</strong> Creating sophisticated, responsible entertainment through premium adult content production, targeted marketing, and cutting-edge digital gaming concepts.
@@ -188,7 +160,7 @@
                             Online Games & Canino Entertainment
                         </h3>
                         <p class="service-description">
-                            Exciting digital entertainment platforms featuring canino-inspired experiences. <strong>Strictly promotional and entertainment purposes only</strong> – no real-money betting or gambling.
+                            Exciting digital entertainment platforms featuring canino-inspired experiences. <strong>Strictly promotional and entertainment purposes only</strong> – showcasing innovative gaming concepts.
                         </p>
                         <ul class="service-features">
                             <li>Cutting-edge gaming concepts</li>
@@ -197,7 +169,7 @@
                             <li>Responsible gaming promotion</li>
                         </ul>
                         <p class="service-disclaimer">
-                            <em>For entertainment only. No real-money transactions.</em>
+                            <em>For display and promotional purposes only.</em>
                         </p>
                     </div>
                 </article>
@@ -476,7 +448,7 @@
                             <span class="contact-icon">📍</span>
                             <div>
                                 <h4>Location</h4>
-                                <p>Quezon City<br>National Capital Region, Philippines</p>
+                                <p>Pennsylvania<br>United States of America</p>
                             </div>
                         </div>
 
@@ -539,7 +511,7 @@
                         </button>
 
                         <p class="form-notice">
-                            * Required fields. By submitting, you confirm you are 18+ and agree to professional communication.
+                            * Required fields. By submitting, you agree to professional communication.
                         </p>
                     </form>
                 </div>
@@ -574,21 +546,20 @@
                     <p>
                         <a href="mailto:info@kentertainment.studio" class="footer-link">info@kentertainment.studio</a>
                     </p>
-                    <p>Quezon City, NCR, Philippines</p>
+                    <p>Pennsylvania, United States of America</p>
                 </div>
             </div>
 
             <div class="footer-disclaimers">
                 <p class="disclaimer-strong">
-                    <strong>18+ ONLY</strong> | Adult-Oriented Content | Promotional Entertainment Only | No Real-Money Gaming
+                    Adult-Oriented Content | Promotional Entertainment Only | Display Purposes
                 </p>
                 <p class="disclaimer-responsible">
-                    <strong>Game Responsibly</strong> – PAGCOR Responsible Gaming: 
-                    <a href="https://www.pagcor.ph" target="_blank" rel="noopener noreferrer" class="footer-link">www.pagcor.ph</a> | 
-                    <a href="mailto:keepitfun@pagcor.ph" class="footer-link">keepitfun@pagcor.ph</a>
+                    <strong>Licensed & Regulated</strong> – Gaming concepts showcased under Curaçao Gaming Authority standards | 
+                    <a href="https://www.curacaolicensing.com" target="_blank" rel="noopener noreferrer" class="footer-link">www.curacaolicensing.com</a>
                 </p>
                 <p class="disclaimer-compliance">
-                    <em>18 U.S.C. 2257 Record-Keeping Requirements Compliance Statement available upon request. All models are 18 years or older. All content is consensual and complies with applicable laws.</em>
+                    <em>18 U.S.C. 2257 Record-Keeping Requirements Compliance Statement available upon request. All models are 18 years or older. All content is consensual and complies with applicable laws. This is a showcase website for display purposes only.</em>
                 </p>
             </div>
 
