Fix remaining Quezon City and Philippines references in timeline
- Update timeline milestone from 'Founded in Quezon City' to 'Founded in Pennsylvania'
- Change description from Philippines to United States

--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
                     </div>
                     <div class="timeline-content glass-card">
                         <h3 class="timeline-year">2024</h3>
-                        <h4 class="timeline-title">Founded in Quezon City</h4>
+                        <h4 class="timeline-title">Founded in Pennsylvania</h4>
                         <p class="timeline-description">
-                            K Entertainment Studio Inc. established with a vision to redefine premium entertainment in the Philippines.
+                            K Entertainment Studio Inc. established with a vision to redefine premium entertainment in the United States.
                         </p>
                     </div>
                 </div>
